2001-11-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (do_3dplot) [PM3D]: Handle plot style FILLEDBOXES
 	by falling back to IMPULSES.

	* src/hidden3d.c (build_networks) [PM3D]: Dito.

2001-11-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/set.c (set_label): Corrected as yet un-ChangeLog'ed new code
 	from Petr that allows linetypes to be set for labels and relaxes
	the syntax for that command a lot.

2001-11-10  Petr Mikulik  <mikulik@physics.muni.cz>
	* src/gadgets.h src/mouse.h src/graph3d.c src/graphics.c src/save.c
	src/set.c src/show.c docs/gnuplot.doc NEWS: 'set label' with any
	line type (colour), point type and point size; further allow any
	order of options.

2001-11-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/datafile.c (f_column): Added missing implementation of
 	'column(-2)' in using expressions.  Removed offset by one of value
 	held in "column" variable to de-obfuscate the code a bit.

2001-11-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* NEWS: Lots of additional fixes and new features mentioned, and
 	some entries moved to the correct release they came with.

2001-10-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/axis.h src/axis.c src/graphics.c src/save.c src/set.c
 	src/unset.c src/show.c src/graph3d.c docs/gnuplot.doc NEWS: New
 	options for 'set grid': {layerdefault | front | back}.

	* src/save.c: Labels and arrows were not saving "back", "front"
 	option.

2001-10-31  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (boundary3d): Fix computation of current aspect
 	ratio by casting input variable to double.

2001-10-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c term/tgif.trm term/pm.trm term/gif.trm term/fig.trm
	term/cgm.trm: The first and the last colour ranges in 'set palette
	maxcolors' were different (half of the range) than the "inner"
	colour ranges. I.e. now	the discrete palette drivers have the 